--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python3 -m pip install mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run provided tests
       run: |
         python3 run_tests.py
+    - name: Run mypy
+      run: |
+        mypy $(git ls-files \*.py)
